# shaman

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ProqMon.sln  cleanit.bat  makeit.bat
ProqMon/: CMakeLists.txt  CMakeSettings.json  MainWidget.cpp  MainWidget.h  ProqMon.cpp  ProqMon.rc  ProqMon.vcxproj  ProqMon.vcxproj.filters  Resource.h
qtservice/: CMakeLists.txt  qtservice.cpp
shaman/: CMakeLists.txt  MainWidget.cpp  Shaman.cpp  TreeModel.cpp  TreeModel.h
shaman/QService/: qtservice_win.cpp
shaman_broker/: CMakeLists.txt  Main.cpp
shaman_ctrl/: CMakeLists.txt  main.cpp
shaman_svc/: CMakeLists.txt  Main.cpp  SimpleService.cpp  SimpleService.h
